--- a/index.html
+++ b/index.html
@@ -466,7 +466,8 @@
                 <img alt="" src="/assets/img/php.png" class="responsive-img" />PHP
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/JavaScript-logo.png" class="responsive-img" />Javascript
+<img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/JavaScript-logo.png" class="responsive-img" />
+
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
