--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
   <meta name="twitter:url" content="https://twitter.com/waf_exe" />
   <meta name="author" content="Weslley Ferreira" />
   <meta name="description" content="Software Developer with a passion for backend development" />
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-icon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/android-icon-192x192.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png" />
-  <link rel="manifest" href="/assets/img/favicon/manifest.json" />
+  <link rel="apple-touch-icon" sizes="57x57" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/apple-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/apple-icon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/android-icon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/favicon-96x96.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/favicon-16x16.png" />
+  <link rel="manifest" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/manifest.json" />
   <meta name="msapplication-TileColor" content="#ffffff" />
-  <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png" />
+  <meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/favicon/ms-icon-144x144.png" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="robots" content="index, follow" />
   <!-- Google Site Verification for indexing -->
@@ -85,7 +85,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/waf.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/waf.jpg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Weslley's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Weslley's resume in a new tab" href="https://sirwez.github.io/assets/resume/cv_weslley.pdf" target="_blank"
+        <a aria-label="Open Weslley's resume in a new tab" href="https://drive.google.com/file/d/1GC9hrPVm3VU7WNBFsSDRS8OiJr4cjvvP/view?usp=share_link" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -463,23 +463,22 @@
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/php.png" class="responsive-img" />PHP
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/php.png" class="responsive-img" />PHP
               </div>
               <div class="col s4 m2">
-<img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/JavaScript-logo.png" class="responsive-img" />
-
+             <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/masterhttps://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/JavaScript-logo.png" class="responsive-img" />
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
               </div>
             </div>
           </div>
@@ -490,17 +489,17 @@
             <h4 class="brown-text light">Tools</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/composer.jpeg" class="responsive-img" />Composer
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/composer.jpeg" class="responsive-img" />Composer
               </div>
               <br>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/PHPunit.png" class="responsive-img" /><br>PHPunit
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/PHPunit.png" class="responsive-img" /><br>PHPunit
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/xampp.png" class="responsive-img" />Xampp
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/xampp.png" class="responsive-img" />Xampp
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/doctrine.png" class="responsive-img" />Doctrine ORM
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/doctrine.png" class="responsive-img" />Doctrine ORM
               </div>
             </div>
           </div>
@@ -512,19 +511,19 @@
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/logo-laravel-1024.png" class="responsive-img" />Laravel
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/logo-laravel-1024.png" class="responsive-img" />Laravel
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/codeigniter.png" class="responsive-img" />CodeIgniter
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/codeigniter.png" class="responsive-img" />CodeIgniter
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/symfony-new-logo.jpg" class="responsive-img" />Symfony
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/symfony-new-logo.jpg" class="responsive-img" />Symfony
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/jquery.png" class="responsive-img" />jQuery
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/jquery.png" class="responsive-img" />jQuery
               </div>
             </div>
           </div>
@@ -538,19 +537,19 @@
 
 
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/git.png" class="responsive-img" />Git
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/Moby-logo.webp" class="responsive-img" />Docker
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/Moby-logo.webp" class="responsive-img" />Docker
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/composer1.jpeg" class="responsive-img" />Composer
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/composer1.jpeg" class="responsive-img" />Composer
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/postman.jpg" class="responsive-img" />Postman
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/postman.jpg" class="responsive-img" />Postman
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/apache-logo.png" class="responsive-img" /><br>Apache
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/apache-logo.png" class="responsive-img" /><br>Apache
               </div>
             </div>
           </div>
@@ -566,7 +565,7 @@
                   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/mooc-machine-learning-coursera-800x500.jpg">
+                        <img src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/mooc-machine-learning-coursera-800x500.jpg">
                       </div>
                       <div class="card-content">
                         <span class="card-title teal-text">Machine Learning (Stanford)</span>
@@ -577,7 +576,7 @@
                   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
+                        <img src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
                       </div>
                       <div class="card-content">
                         <span class="card-title teal-text">Algorithms (Stanford)</span>
