--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/php.png" class="responsive-img" />PHP
               </div>
               <div class="col s4 m2">
-             <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/masterhttps://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/JavaScript-logo.png" class="responsive-img" />
+                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/JavaScript-logo.png" class="responsive-img" />Javascript
               </div>
               <div class="col s4 m2">
                 <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
