--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Font Awesome Icon - CSS-->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/css/style.css" />
+  <link rel="stylesheet" href="https://varadbhogayata.github.io/assets/css/style.css" />
   <title>Weslley Ferreira | Software Developer</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -466,7 +466,7 @@
                 <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/php.png" class="responsive-img" />PHP
               </div>
               <div class="col s4 m2">
-                <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/JavaScript-logo.png" class="responsive-img" />Javascript
+             <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/masterhttps://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/JavaScript-logo.png" class="responsive-img" />
               </div>
               <div class="col s4 m2">
                 <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
