--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               <h2>Hi, I'm <span class="teal">Weslley Ferreira.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>As a proactive Backend Developer, I am passionate about using technology to solve real-world problems and help others. My curiosity and dedication to learning enable me to excel at tackling complex challenges and delivering efficient, high-quality solutions. I believe that the key to success in this field is staying up-to-date with the latest industry developments and best practices, and I am committed to continuously expanding my knowledge and skills to stay ahead of the curve. Overall, my goal is to work collaboratively with my team to deliver innovative solutions that make a meaningful impact in the world.</h5>
+              <h5>As a proactive Backend Developer, I'm passionate about using technology to solve problems and help others. I excel at complex challenges and stay up-to-date with industry developments. My goal is to deliver innovative solutions that make a meaningful impact.</h5>
             </div>
             <div class="social">
               <a href="http://linkedin.com/in/sirwez" target="_blank">
@@ -466,7 +466,7 @@
                 <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/php.png" class="responsive-img" />PHP
               </div>
               <div class="col s4 m2">
-             <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/masterhttps://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/JavaScript-logo.png" class="responsive-img" />
+             <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/JavaScript-logo.png" class="responsive-img" /> Javascript
               </div>
               <div class="col s4 m2">
                 <img alt="" src="https://raw.githubusercontent.com/sirwez/portfolio/master/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
